# structuredvg

./: CHOICES.md  Cargo.toml  README.md
data/: attribute_groups.json  elements.json
macros/: Cargo.toml
macros/src/: bundle.rs  lib.rs  util.rs
spec-scraper/: Cargo.toml  README.md
spec-scraper/src/: attribute.rs  element.rs  main.rs
src/: base.rs  common.rs  error.rs  io.rs  lib.rs  math.rs  path.rs  script.rs  style.rs
