[package]
name = "spec-scraper"
version = "0.1.0"
edition = "2021"
description = "SVG specification scraper for structuredvg"
publish = false

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

ego-tree = "0.6"
scraper = "0.17"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
env_logger = "0.10"
